// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show expenses summary for 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $1,305.02
  </h2>
</div>
`;

exports[`should show expenses summary for 2 expenses 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totalling 
    $1,658.06
  </h2>
</div>
`;
